homeworks/beigelzimer/module-03/lesson-08/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: course-app
spec:
    type: ClusterIP
    selector:
        app: course-app
    ports:
        -   port: 80
            targetPort: 8080
#            nodePort: 30080
            protocol: TCP
